# kubevirt

./: Makefile  WORKSPACE  go.mod  go.sum
api/openapi-spec/: swagger.json
cluster/: ephemeral-provider-common.sh
cluster/cisco/: provider.sh
cmd/virt-handler/: virt-handler.go
hack/: build-manifests.sh  check.sh  config-default.sh  dockerized  generate.sh  rpm-deps.sh
hack/docker-builder/: docker_env
hack/docker-manifests/: Dockerfile  docker_env  entrypoint.sh
manifests/dev/: virt-handler.yaml.in
pkg/api/v1/: deepcopy_generated.go  openapi_generated.go  schema.go  schema_swagger_generated.go
pkg/host-disk/: host-disk.go
pkg/util/: BUILD.bazel  api_helper.go  network_wrapper.go
pkg/virt-api/webhooks/validating-webhook/: validating-webhook.go
pkg/virt-controller/services/: template.go
pkg/virt-controller/watch/: application.go  node.go  node_test.go
pkg/virt-handler/: vm.go
pkg/virt-handler/device-manager/: device_controller.go
pkg/virt-launcher/virtwrap/: manager.go
pkg/virt-launcher/virtwrap/agent-poller/: agent_poller.go
pkg/virt-launcher/virtwrap/api/: converter.go  deepcopy_generated.go  defaults.go  schema.go
pkg/virt-launcher/virtwrap/converter/: converter.go
pkg/virt-launcher/virtwrap/network/: network.go  podinterface.go  podinterface_test.go
pkg/virt-operator/creation/components/: deployments.go
rpm/: BUILD.bazel
staging/src/kubevirt.io/client-go/: go.mod  go.sum
staging/src/kubevirt.io/client-go/api/v1/: types.go
tools/manifest-templator/: manifest-templator.go
